fixing bankAccountExist and cleaning

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:th="http://www.thymeleaf.org"
-      layout:decorate="~{fragments/layout}">
+<html>
 <head>
     <title>Index</title>
 </head>
 <body>
-<div layout:fragment="content" th:remove="tag">
+<div>
     <div class="heading-1 align-center">Bem Vindo!</div>
 </div>
 </body>
