--- a/src/main/frontend/src/components/todo/Button.css
+++ b/src/main/frontend/src/components/todo/Button.css
@@ -7,3 +7,12 @@
     font-size: 12px;
     line-height: 1.42857;
 }
+
+.btn-circle-large {
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+}
